--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,9 +15,21 @@
     </p>
 </div>
 
+
+
 <hr>
-<%= @myhash[:name] %><br>
-<%= @myhash[:address] %><br>
-<%= @myhash[:phone] %>
+  <div class="col d-flex justify-content-center">
+    <div class="card " style="width: 33rem;">
+      <div class="card-body">
+        <%= @myhash[:name] %><br>
+        <%= @myhash[:address] %><br>
+        <%= @myhash[:phone] %><br>
+        <%= @myhash[:email] %><br>
+        <%= link_to "Do something", trials_index_path, class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
+
+
 
 
