--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,7 @@
         <%= @myhash[:address] %><br>
         <%= @myhash[:phone] %><br>
         <%= @myhash[:email] %><br>
-        <%= link_to "Do something", trials_index_path, class: 'btn btn-primary' %>
+        <%= link_to "Do something", trials_path, class: 'btn btn-primary' %>
         <% end %>
       </div>
     </div>
