--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Caseprism</a>
-    <%= image_tag "rose.jpg", height: 100 %>
+    <%= image_tag "logo.png", height: 50 %>
   
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,8 +12,14 @@
           <%= link_to 'Home',root_path, class: 'nav-link active' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Trials',trials_index_path, class: 'nav-link active' %>
+          <%= link_to 'Trials',trials_path, class: 'nav-link active' %>
         </li>
+
+        <li class="nav-item">
+          <%= link_to 'NCFs', ncfs_path, class: 'nav-link active' %>
+        </li>
+
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
