--- a/app/views/trials/index.html.erb
+++ b/app/views/trials/index.html.erb
@@ -3,3 +3,36 @@
 	<h1>Trials#index</h1>
 	<p>Find me in app/views/trials/index.html.erb</p>
 </div>
+<hr>
+
+	<div>
+		<p> 
+			<% if !@myhash[:caldate].empty? %>
+				<b><%= @myhash[:caldate] %></b>
+			<% end %>
+		</p>
+	</div>
+
+
+	<div class="container">
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Time</th>
+					<th>Case Name</th>
+					<th>Type</th>
+				</tr>
+			<tbody>
+				<tr>
+				<% @arry.each do |i| %>
+					<td><%= i[:trial_time] %></td>	
+					<td><u><%= i[:trial_name] %></u><br><%= i[:trial_number] %></td>
+					<td><%= i[:type] %></td>	
+				<% end %>
+				</tr>  
+		</table>
+	</div>
+
+	
+	
+
