--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
 
 <%= render "shared/nav" %>
-  
+ 
+
+
 <div class="container">
   <h1>Welcome!</h1>
     <p>
@@ -35,6 +37,8 @@
   </div>
 
 <hr>
+
+<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="casepism" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 
 
 
