--- a/app/views/trials/index.html.erb
+++ b/app/views/trials/index.html.erb
@@ -26,13 +26,15 @@
 				<tr>
 				<% @arry.each do |i| %>
 					<td><%= i[:trial_time] %></td>	
-					<td><u><%= i[:trial_name] %></u><br><%= i[:trial_number] %></td>
+					<td><u><%= i[:trial_name] %></u><%= i[:trial_number] %></td>
 					<td><%= i[:type] %></td>	
 				<% end %>
 				</tr>  
 		</table>
 	</div>
 
-	
+<div>
+	<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="casepism" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+</div>
 	
 
