--- a/app/views/ncfs/index.html.erb
+++ b/app/views/ncfs/index.html.erb
@@ -2,31 +2,41 @@
 
 <h3>Ncfs#index</h3>
 
-		<% if @ncfs.empty? %>
-			<p>You are not tracking any new case filings.</p>
-		<% else %>
-			<p>You are tracking <%= @ncfs.count %></p>
+	<% if @ncfs.nil? %>
+		<p>You are not tracking any new case filings.</p>
+	<% else %>
+		<p>Tracking: <%= @ncfs.count %> new filings</p>
 		<div class="container">
-		<table class="table table-striped">
-			<thead>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>Name</th>
+					</tr>
+				<tbody>
 				<tr>
-					<th>Name</th>
+					<% @ncfs.each do |i| %>
+						<td><%= i.name %></td>
+					<% end %> 
 				</tr>
-			<tbody>
-				<tr>
-				<% @ncfs.each do |i| %>
-					<td><%= @ncfs[:name] %></td>
-				<% end %> 
 
 
-			<%= @ncfs.inspect %>
+			
+
+			
 		<% end %>
 
-		<%= form_with url: "/search", method: :get do |form| %>
+		<%= form_with url: "/ncfs_add", method: :get do |form| %>
 			  <%= form.label :query, "Track name:" %>
 			  <%= form.text_field :query %>
 			  <%= form.submit "Add", class: "btn btn-primary"  %>
 		<% end %>
+<hr>
+
+<%= params %>
+<hr>
+
+
+
 
 
 	
