--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
     <% if @myhash[:name].nil? %>
         <%= "Invalid SBN" %>
     <% else %>
-        <%= @myhash[:name] %><br>
+        <%= @myhash[:name] %> <%= @myhash[:sbn] %><br>
         <%= @myhash[:address] %><br>
         <%= @myhash[:phone] %><br>
         <%= @myhash[:email] %><br>
@@ -38,7 +38,7 @@
 
 <hr>
 
-<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="casepism" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+
 
 
 
